packages/lang/test/__golden__/config-errors/insecure-bad-value.txt
error[TF010]: expected `true` or `false` after `insecure`, found `yes`
 --> tflw.config:2:12
  |
2 |   insecure yes
  |            ^^^
